--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             <!-- <div class="logo">
                 <img src="assets/img/logo.png" alt="" width="300px">
             </div> -->
-            <video src="assets/img/file.mp4" autoplay loop></video>
+            <div class="banner">
+                <img src="assets/img/file_AdobeExpress (1).gif" alt="">
+            </div>
             <div class="slider-info">
                 <div class="slide-track">
                 </div>
@@ -130,14 +132,6 @@
 
                     <h3>Últimas Notícias</h3>
                 </div>
-
-                <div class="siga-nos">
-                    <h2>Siga-nos nas redes sociais</h2>
-                    <p>Fique por dentro de todas as notícias em tempo real!</p>
-                    <img src="assets/img/facebook.png" alt="facebook">
-                    <img src="assets/img/instagram.png" alt="">
-                </div>
-
             </section>
             <section class="categorias">
                 <div>
@@ -235,6 +229,7 @@
     </footer>
     <script src="index.js"></script>
     <script src="assets/js/nav.js"></script>
+    <script src="assets/js/videoLoop.js"></script>
     <script src="assets/js/noticiasSlider.js"></script>
     <script src="assets/js/filterMain.js"></script>
     <script src="assets/js/filterCategoria.js"></script>
