--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <img src="assets/img/logo.png" alt="" width="300px">
             </div> -->
             <div class="banner">
-                <img src="assets/img/file_AdobeExpress (1).gif" alt="">
+                <img src="assets/img/logoBanner.jpg" alt="">
             </div>
             <div class="slider-info">
                 <div class="slide-track">
